--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     $('#sample1').dwChart({
       name: 'asignacionSala',
       title: 'Asignación de sala',
-      type: 'bar', // bar
+      type: 'bar', // bar, barpie
       orientation: 'vertical',
       unit: 'percentage',
       decimals: 1,
