--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           number: 67.88
         },
         {
-          title: 'jornada 2',
+          title: 'jornada extra grande 2',
           number: 23
         },
         {
@@ -48,11 +48,11 @@
           number: 2.001
         },
         {
-          title: 'jornada 5',
+          title: 'jornada extra super mega grande 5',
           number: 56.1
         },
         {
-          title: 'jornada 6',
+          title: 'jornada hiper mega re contra grande 6',
           number: 100
         }
       ]
