--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <body>
   <div id="contetendorSample">
     <div id="sample1" class="demoDiv"></div>
+    <div id="sample2" class="demoDiv"></div>
   </div>
 
   <script type="text/javascript">
-    // checkbox
+    // bar
     $('#sample1').dwChart({
       name: 'asignacionSala',
       title: 'Asignación de sala',
@@ -54,6 +55,42 @@
         {
           title: 'jornada hiper mega re contra grande 6',
           number: 100
+        }
+      ]
+    })
+    // barpie
+    $('#sample2').dwChart({
+      name: 'subseccion',
+      title: 'Volumen de subsección',
+      type: 'barpie', // bar, barpie
+      orientation: 'horizontal',
+      unit: 'number',
+      decimals: 0,
+      emphasis: 3,  // 1 to 10
+      data: [
+        {
+          title: 'jornada 1',
+          number: 1200
+        },
+        {
+          title: 'jornada extra grande 2',
+          number: 800
+        },
+        {
+          title: 'jornada 3',
+          number: 2340
+        },
+        {
+          title: 'jornada 4',
+          number: 540
+        },
+        {
+          title: 'jornada extra super mega grande 5',
+          number: 2004
+        },
+        {
+          title: 'jornada hiper mega re contra grande 6',
+          number: 1001
         }
       ]
     })
