fix legend bar style

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     // bar
     $('#sample1').dwChart({
       name: 'asignacionSala',
-      title: 'Asignación de sala',
+      title: 'Asignación de docentes',
       type: 'bar', // bar, barpie
       orientation: 'vertical',
       unit: 'percentage',
       decimals: 1,
-      emphasis: 5,  // 1 to 10
+      emphasis: 1,  // 1 to 10
       data: [
         {
           title: 'jornada 1',
@@ -66,7 +66,7 @@
       orientation: 'horizontal',
       unit: 'number',
       decimals: 0,
-      emphasis: 4,  // 1 to 10
+      emphasis: 3,  // 1 to 10
       data: [
         {
           title: 'jornada 1',
