--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       unit: 'number',
       decimals: 0,
       emphasis: 3,  // 1 to 10
+      chooseFirst: true,
       data: [
         {
           title: 'jornada 1',
